--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@rails/webpacker": "4.2.2",
     "bootstrap": "3.4.1",
     "jquery": "3.5.0",
+    "jquery-ui-dist": "^1.12.1",
+    "rails-ujs": "^5.2.4-2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
